--- a/templates/named.conf.j2
+++ b/templates/named.conf.j2
@@ -36,8 +36,7 @@ options {
 	forward only;
 	forwarders { {{ dns.forwarder1 | default("8.8.8.8") }}; {{ dns.forwarder2 | default("8.8.4.4") }}; };
 
-	dnssec-enable yes;
-	dnssec-validation no;
+	dnssec-validation auto;
 
 	managed-keys-directory "/var/named/dynamic";
 
